added avatars and pictures
